# tboardfs

./: .coverage  .gitignore  .pre-commit-config.yaml  FINDINGS.md  LICENSE  MODULARIZATION_TODO.md  README.md  REFACTORING_NOTES.md  demo.py  plan.md  pyproject.toml  test_runner.py
.github/workflows/: ci.yml
scripts/: generate_test_logs.py
tboardfs/: __init__.py  array_json.py  classify.py  cli.py  constants.py  custom_scalars.py  decode.py  efficient_parser.py  errors.py  extract.py  file_cli.py  file_cli_commands.py  file_tree.py  filesystem.py  hparams.py  indexer.py  mesh.py  npy_export.py  parser.py  paths.py  plugin_files.py  proto_schema.py  scalar_file.py  summary.py  tables.py  tensor.py  test_generator.py  tfrecord.py
tboardfs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tboardfs/cli/: __init__.py  main.py  validators.py
tboardfs/commands/: __init__.py  export_command.py  extract_command.py  list_command.py
tboardfs/core/: __init__.py  configuration.py  constants.py  data_detector.py  data_iterators.py  data_source.py  data_types.py  exceptions.py  export_config.py  export_pipeline.py  file_utils.py  format_config.py  histogram_utils.py  image_processor.py  ply_writer.py  processing_config.py  reporting.py  unified_virtual_paths.py  virtual_filesystem.py  virtual_paths.py
tboardfs/exporters/: __init__.py  audio_exporter.py  base_exporter.py  histogram_exporter.py  hyperparameter_exporter.py  image_exporter.py  mesh_exporter.py  pr_curve_exporter.py  scalar_exporter.py  text_exporter.py
tboardfs/model/: __init__.py  binary_entry.py  event_file_cache.py  field.py  graph_entry.py  json_entry.py  record.py  run_cache.py  scalar.py  sidecar_entry.py
tboardfs/proto/: __init__.py  custom_scalar_layout_pb2.py  event_pb2.py  hparams_api_pb2.py  hparams_plugin_data_pb2.py  mesh_plugin_data_pb2.py
test-logs/tensorboard/: events.out.tfevents.1780411338.enterprise-g.175833.0  events.out.tfevents.1780429205.enterprise-g.224049.1  events.out.tfevents.1780473136.enterprise-g.262901.1
test-logs/tensorboard/plugins/profile/: trace.json
test-logs/tensorboard/projector/: projector_config.pbtxt
test-logs/tensorboardx/: events.out.tfevents.1780411336.enterprise-g  events.out.tfevents.1780429203.enterprise-g  events.out.tfevents.1780429205.enterprise-g.224049.0  events.out.tfevents.1780473134.enterprise-g  events.out.tfevents.1780473136.enterprise-g.262901.0  projector_config.pbtxt
test-logs/tensorboardx/1780411338.4016616/: events.out.tfevents.1780411338.enterprise-g
test-logs/tensorboardx/projector/: metadata.tsv  projector_config.pbtxt  tensors.tsv
tests/: __init__.py  conftest.py  test_cli.py  test_comprehensive_extraction.py  test_export_config.py  test_file_cli.py  test_format_config.py  test_generated_logs.py  test_parse_file.py  test_parser.py  test_parser_comprehensive.py  test_ply_writer.py  test_processing_config.py  test_script_metadata.py  test_test_generator.py
tests/example-data/full_log/: events.out.tfevents.1748727850.FG-OSL-WS122.7152.0.v2
tests/example-data/log_20_iterations/: events.out.tfevents.1748727851.FG-OSL-WS122.7152.4.v2
tests/example-data/log_5_iterations/: events.out.tfevents.1748727851.FG-OSL-WS122.7152.2.v2
tests/example-data/log_7_iterations/: events.out.tfevents.1748727851.FG-OSL-WS122.7152.3.v2
(+1 files in other folders)
