[project]
name = "tboardfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "dvolgyes@deepconv.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "tboardfs"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]
