[project]
name = "tboardfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "dvolgyes@deepconv.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "loguru>=0.7.3",
    "mfusepy>=0.1.0",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "protobuf>=7.35.0",
    "python-magic>=0.4.27",
    "tqdm>=4.67.3",
]

[project.scripts]
tboardfs = "tboardfs:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "tboardfs"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "moviepy>=2.2.1",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "pillow>=11.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch>=2.12.0",
]
