[project]
name = "tboardfs"
version = "0.2.1"
description = "Read TensorBoard event logs as files through a FUSE filesystem."
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "dvolgyes@deepconv.ai" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["fuse", "tensorboard", "filesystem", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.4.1,<9.0",
    "loguru>=0.7.3,<1.0",
    "mfusepy>=3.1.1,<4.0",
    "numpy>=2.4.6,<3.0",
    "pandas>=3.0.3,<4.0",
    "protobuf>=7.35.0,<8.0",
    "python-magic>=0.4.27,<1.0",
    "tqdm>=4.67.3,<5.0",
]

[project.scripts]
tboardfs = "tboardfs:main"
tboardfs-file = "tboardfs.file_cli:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "tboardfs"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.14.1,<8.0",
    "imageio>=2.37.3,<3.0",
    "matplotlib>=3.10.9,<4.0",
    "moviepy>=2.2.1,<3.0",
    "onnx>=1.21.0,<2.0",
    "onnxruntime>=1.26.0,<2.0",
    "pillow>=11.3.0,<13",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-xdist>=3.8.0,<4.0",
    "soundfile>=0.13.1,<1.0",
    "tensorboard>=2.20.0,<3.0",
    "tensorboardx>=2.6.5,<3.0",
    "torch>=2.12.0,<3.0",
]
